# xfaster

./: .gitignore  .pre-commit-config.yaml  MANIFEST.in  README.rst  algorithm.html  api.html  genindex.html  index.html  objects.inv  py-modindex.html  pyproject.toml  quickstart.html  search.html  searchindex.js  setup.py
.github/workflows/: documentation.yaml  documentation_pr.yaml  pull_request.yaml  release.yaml
_modules/: index.html
_modules/xfaster/: batch_tools.html  parse_tools.html  spec_tools.html  xfaster_class.html  xfaster_exec.html  xfaster_tools.html
_sources/: algorithm.rst.txt  api.rst.txt  index.rst.txt  quickstart.rst.txt
_sources/notebooks/: XFaster_Tutorial.ipynb.txt
_static/: documentation_options.js
docs/: algorithm.rst  api.rst  autodoc.rst  codeuse.rst  conf.py  gcorr.rst  index.rst  intro.rst  notebooks  quickstart.rst  requirements.txt
docs/notebooks/: XFaster_Tutorial.ipynb
example/: .gitignore  config_example.ini  gcorr_config_null.ini  gcorr_config_signal.ini  make_example_maps.py  make_example_transfer_matrix.py  plot_outputs.py  xfaster_example.py  xfaster_example_fg.py
example/maps_example/: transfer_example.txt
example/notebooks/: XFaster_Tutorial.ipynb  XFaster_Tutorial_test.ipynb
gcorr/: README
gcorr/nonnull_gcorr/: compute_gcal.py  gcal_iter_unconstr.py  xfaster_gcal_unconstr.py
notebooks/: XFaster_Tutorial.html  XFaster_Tutorial.ipynb
scripts/gcorr/: README  (+9 more)
xfaster/: __init__.py  base.py  batch_tools.py  gcorr_tools.py  output_class.py  parse_tools.py  xfaster_class.py  xfaster_exec.py  xfaster_tools.py
(+438 files in other folders)
